Possible compatibility problems with earlier versions marked with '*'.

* Added 'name' parameter to ODR encoder/decoder routines to facilitate
pretty ODR print. Updated whole Z39.50 encoder/decoder to reflect the
change. The name parameter can be set to 0 in which no name is specified
for the construction. The macros odr_implicit and odr_explicit sets name
parameter to zero for the construction involved. New macros
odr_implicit_tag and odr_explicit_tag are similar to the others,
except that a name parameter is added. For programmers' that don't use
ODR they probably only need to change the call to z_APDU and z_External.

Added access control facility by interfacing the TCP wrapper library.
YAZ automatically attempts to find the TCP wrapper Library (-lwrap) and
tcpd.h on Unix systems. For the server, option -d<daemon> specifies the
name of the daemon and enables the access control as specified in
hosts.allow/hosts.deny. Refer to man pages tcpd(8) and hosts_access(5).

Fixed memory leak in ccl_find_str and ccl_qual_rm. Thanks to Hans van
den Dool <H.M.vdnDool@kub.nl>.

Added reference ID parameter to most functions in server API - refer
to backend.h. Thanks to Hans van den Dool <H.M.vdnDool@kub.nl>.

Changed name of ccl library to libccl.a (was ccl.a).

Fixed bug in decoder for Explain (Category TargetInfo).

Added support for GNU readline in client. Thanks to Jacob Poulsen
<ja7@dbc.dk>. GNU configure attempts to detect if readline is available.

* CHANGED DEFINITION OF ES: UPDATE (INCLUDING THE OID) to reflect the
new definition from the ZIG. NOTE THIS IF YOU HAVE AN UPDATE
IMPLEMENTATION! This change was made to the development version before
the ZIG decided to retract the amendment. If any users MUST be
compatible with the original Update definition, PLEASE CONTACT US, and
we will include a separate definition corresponding to the old Update
ES. Note that because of the change to the ASN.1 of the
TaskPackageRecordStructure we cannot define a single structure that